--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body{
   font-size: 14px;
-  background: linear-gradient(135deg, #71b7e6, #9b599b);
+  background: #71b7e6;/*linear-gradient(125deg, #71b7e6, #9b599b);*/
   height: 100vh;
 }
 
@@ -77,7 +77,7 @@ text-align: center;
   width: 70%;
   margin-top: 50px;
   padding-left: 25px;
-  margin: 20px auto;
+  margin-left: 60px;
   position: relative;
   /* border: 5px solid black ; */
    
@@ -122,8 +122,9 @@ margin-bottom: 25px;
 }
 
 .combo-box{
-  padding-left: 120px;
+  padding-left: 90px;
   margin-top: 40px;
+  margin-left: 0px;
   /* border: 5px solid black; */
 }
 
@@ -148,8 +149,7 @@ border-radius: 5px;
 
 #Rental{
   width: 70%;
-
-  margin: 20px 20px 20px 110px;
+  margin: 20px 20px 20px 90px;
   position: relative;
 }
 
@@ -168,7 +168,7 @@ border-radius: 5px;
 
 #Buy_prop{
   width: 70%;
-  margin: 20px 20px 20px 110px;
+  margin: 20px 20px 20px 90px;
   position: relative;
   /* border: 5px solid black; */
 }
@@ -178,21 +178,93 @@ border-radius: 5px;
   padding: 10px  5px;
   margin: 20px auto;
 }
-#Buy_prop .input-staff{
+#Buy_prop input{
   width: 20%;
   padding: 10px  5px;
   margin: 10px 0 10px 30px;
   text-align: center;
 }
 
+
+#Buy_prop .price{
+  margin-left: 43px;
+}
+
+
+#Buy_prop .deposit{
+  margin-left: 55px;
+}
+
+
+#Buy_prop .rate{
+  margin-left: 65px;
+}
+
+#Buy_prop .month{
+  margin-left: 30px;
+}
+
 form .register-btn{
 text-align: center;
 }
 
-.vehicle{
-  border: 5px solid black;
+.combo-vehicle{
+  width: 70%;
+  margin: 45px 20px 20px 90px;
+  position: relative;
+  /* border: 5px solid black; */
 }
 
+
+.combo-vehicle label{
+  font-size: 1.5rem;
+  padding: 10px  5px;
+  margin: 20px auto;
+}
+
+#Buy_vehicle{
+  width: 70%;
+  margin: 20px 20px 20px 100px;
+  position: relative;
+}
+
+#Buy_vehicle .model{
+  margin-left: 120px;
+  /* border: 5px solid black; */
+}
+
+
+#Buy_vehicle .Vehicle_price{
+  margin-left: 43px;
+}
+
+
+#Buy_vehicle .VDeposit{
+  margin-left: 55px;
+}
+
+
+#Buy_vehicle .VInterest{
+  margin-left: 65px;
+}
+
+#Buy_vehicle .VPremium{
+  margin-left: 3px;
+}
+
+
+#Buy_vehicle label{
+  font-size: 1.5rem;
+  padding: 10px  5px;
+  margin: 20px auto;
+}
+
+#Buy_vehicle input{
+  width: 20%;
+  padding: 10px  5px;
+  margin: 10px 0 10px 30px;
+  text-align: center;
+}
 
 form button{
   width: 40%;
